test/pass/struct1.rill
struct A {
}

def main(): unit {
  let _ = f();
}

def f(): A {
  A {}
}
