test/compile_failure/trait_not_impl.rill
// skip

trait A {
  def f(self): unit;
}

impl A for i32 {
}
